[package]
name = "gh-proxxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
axum_static = "1.7.1"
mimalloc = "0.1.43"
once_cell = "1.20.2"
regex = { version = "1.11.0", default-features = false }
reqwest = { version = "0.12.8", features = ["stream"] }
sync_wrapper = "1.0.1"
tokio = { version = "1.40.0", default-features = false, features = [
  "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
