[package]
name = "gh-proxxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
axum_static = "1.7.1"
anyhow = "1.0"
bytes = "1.0"
config = { version = "0.14", features = ["toml"] }
http = "1.0"
mimalloc = "0.1.43"
once_cell = "1.20.2"
regex = { version = "1.11.0", default-features = false }
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sync_wrapper = "1.0.1"
thiserror = "1.0"
tokio = { version = "1.40.0", default-features = false, features = [
  "rt-multi-thread",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3"
http-body-util = "0.1"


[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
